@@ -1,13 +1,11 @@
 \name{makeSection}
 \alias{makeSection}
-\alias{+.section}
+
 \title{Bind CTD profiles together into a cross section}
+
 \description{Combine a series of CTD profiles together to create a section.}
 
-\usage{
-makeSection(item, \dots)
-\special{section + station}
-}
+\usage{makeSection(item, \dots)}
 
 \arguments{
   \item{item}{either (1) a \code{ctd} object, in which case the rest of the
@@ -16,33 +14,26 @@ makeSection(item, \dots)
     names of files containing \code{ctd} data.}
   \item{\dots}{one or more \code{ctd} objects, either given as separate
     arguments, or a list of such objects.}
-  \item{section}{a section to which a station is to be added.}
-  \item{station}{a station to be added to a section.}
 }
 
-\details{The stations are stored in order of the station
-  identification number (stored as \code{metadata$station} in the ctd
-  object), if possible.  The \code{ctd} stations must share identical
-  pressure values; use \code{\link{sectionGrid}} to do that.}
+\details{The stations are stored in order of the station identification number
+    (stored as \code{metadata$station} in the ctd object), if possible.  The
+    \code{ctd} stations must share identical pressure values; use
+    \code{\link{sectionGrid}} to do that.}
 
-\value{An object of \code{\link[base]{class}} "\code{section}" (for
-  details, see \code{\link{read.section}}).}
+\value{An object of \code{\link[base]{class}} \code{section}.}
 
-\seealso{\code{\link{read.ctd}} reads CTD data.  \code{\link{section}}
-  is a sample data set.}
+\seealso{See \code{\link{section-class}} for information on section objects and
+    functions that deal with them.}
 
 \examples{
 library(oce)
 data(ctd)
-ctdWarmed <- ctd
-ctdWarmed[["temperature"]] <- ctdWarmed[["temperature"]] + 0.5
-ctdWarmed[["latitude"]] <- ctdWarmed[["latitude"]] + 0.1
-section <- makeSection(ctd, ctdWarmed)
+ctd2 <- ctd
+ctd2[["temperature"]] <- ctd[["temperature"]] + 0.5
+ctd2[["latitude"]] <- ctd[["latitude"]] + 0.1
+section <- makeSection(ctd, ctd2)
 summary(section)
-
-s2 <- makeSection(ctd)
-s2 <- s2 + ctdWarmed
-plot(s2)
 # Below is how to create a section from well-named CSV files
 # that contain consecutive stations
 \dontrun{
